Added %headblocks_order_<previous|current|next>% placeholders